--- a/README.org
+++ b/README.org
@@ -137,11 +137,11 @@ versions, the ~load-path~, =Elisp=, and =Git=.
 Org2Blog's dependencies are defined in ~org2blog-def.el~. To get you started
 quickly there are two helper functions here:
 
-- ~owp-checkout-statementt~ creates Git commands to get the code from GitHub
+- ~owp-checkout-statement~ creates Git commands to get the code from GitHub
   into the directory you want it stored. Call it and enter the directory name.
   Copy and paste the commands from =*Messages*= into your Terminal to run them.
 - ~owp-load-statement~ creates Elisp code to load the libraries. Copy them into
-  your Init file then run them. Now yhey will get loaded each time your start
+  your Init file then run them. Now they will get loaded each time your start
   Emacs.
 
 For example you should see something like this:
