--- a/docs/TestPlan.org
+++ b/docs/TestPlan.org
@@ -142,6 +142,7 @@ These are commands that insert markup into your post.
 - [ ] Update version number and dependent libraries in
   - [ ] org2blog-pkg.el
   - [ ] MELPA recipe
+  - [ ] Header line in org2blog.el
 
 * Installation
 
