--- a/README.org
+++ b/README.org
@@ -170,8 +170,8 @@ request. It is very fun and easy.
 :ID:       org_gcr_2019-03-06T17-15-24-06-00_cosmicality:808A8EC0-9E9D-4DE2-958D-65E073D5100B
 :END:
 
-Note: For a better experience try reading this document inside of Emacs and Org
-mode. An easy way to do it is to call ~owp-readme~.
+Note: For a better learning experience try reading this document inside of
+Emacs and Org mode by callling ~owp-readme~. 
 
 ** Make Your First Post In Less 5 Minutes
 :PROPERTIES:
@@ -207,7 +207,12 @@ in the Screenshots section so you know it is easy to do. Here is how!
   UI (setting keybindings elsewhere is super easy too and you'll cover it
   soon). For simplicity these directions will refer to "things to do in the
   UI" in the style of =UI [action]=. Find the action and press the key for it.
-  Here is where to find it: [[file:/images/menu-main.png]]
+  Here are some examples of the UI
+  [[file:/images/menu-main.png]]
+  [[file:/images/InsertThingsMenu.png]]
+  [[file:/images/CategoryCompletion.png]]
+  [[file:/images/ReadmeBuffer.png]]
+  [[file:/images/VariableMenu.png]]
 - Create a brand new entry from a template: =UI [New Buffer]=
   - If you aren't logged in then Org2Blog will ask if you would like to. Yes
     you should go ahead and log in.
