--- a/README.org
+++ b/README.org
@@ -71,9 +71,11 @@ Blog from Org mode to WordPress.
 
 ** Requirements And Compatibility
 
-Org2Blog runs against the version of Org mode that comes pre-loaded with Emacs.
+Org2Blog runs against the version of Org mode that comes pre-loaded with
+Emacs. Org2Blog will require a relatively recent version of Emacs simply to
+keep it up to date with Org mode.
 
-Org2Blog currently requires Emacs 26.2.
+Org2Blog currently requires Emacs 26.2 and uses Org 9.2.2 that comes with it.
 
 ** Using A Package
 :PROPERTIES:
