--- a/HISTORY.org
+++ b/HISTORY.org
@@ -1,22 +1,47 @@
 * Org2Blog Release History
 
-** 2019-01-31 Org2Blog v1.0.3 Released
+** v1.1.0
+
+- New Features
+  - User Interface: Exposes multitude of Org2Blog features for easy use.
+  - Documentation: Added for all features.
+  - Status information explaining what is happening and what you can do next.
+  - Combination of user interface and additional documentation make for easier
+    use.
+- Refinement
+  - Added dependency on Emacs 26.2 and Org mode 9.2.2 included with it
+  - When you make xml-rpc calls, you can specify the blod id. However, org2blog
+    always uses blog id '1'. There is no other way to do it. That value
+    'org2blog/wp-server-blogid' is a defvar, but it isn't set anywhere. In one
+    place, it is checked for in `o2b-user-login`, and if it can't find it, then
+    it defaults to 1. This is now a constant.
+  - Finished implementing numerous features
+  - Handle all network errors
+- Fixes
+  - Exporter includes source block IDs
+- Road-map
+  - Retire obsolete functions
+  - Replace double-duty postid id with page id
+  - Functions already know about page versus post, so enforce that every
+    page post must have page id
+
+*** 2019-01-31 Org2Blog v1.0.3 Released
 
 Adds Hydra support for user-interface.
 
-** 2017-12-16 Org2Blog v1.0.2 Released
+*** 2017-12-16 Org2Blog v1.0.2 Released
 
 Increment for new metaweblog version.
 
-** 2017-12-16 Org2Blog v1.0.1 Released
+*** 2017-12-16 Org2Blog v1.0.1 Released
 
 Use latest metaweblog
 
-** 2017-06-27 Org2Blog v1.0.0 Released
+*** 2017-06-27 Org2Blog v1.0.0 Released
 
 Communicate completeness of the library with a first major release.
 
-** 2017-05-19 Org2Blog v0.9.3 Released
+*** 2017-05-19 Org2Blog v0.9.3 Released
 
 - v0.9.2 ad389ae was released on 14-12-14
 - Development continued until 16-05-02 fc7b2d9
@@ -28,10 +53,10 @@ Communicate completeness of the library with a first major release.
 - So therefore a new release
   - v0.9.3
 
-** 2014-12-15 Org2Blog v0.9.2 Released
+*** 2014-12-15 Org2Blog v0.9.2 Released
 
 Bump up version.
 
-** 2014-11-30 Org2Blog v0.9.1 Released
+*** 2014-11-30 Org2Blog v0.9.1 Released
 
 Bump up version to 0.9.1.
