--- a/docs/ReleaseProcess.org
+++ b/docs/ReleaseProcess.org
@@ -1,7 +1,7 @@
 - [ ] Update the version number and call ~owp-update-artifacts~.
 - [ ] Bring codebase up to expectations in [[CONTRIBUTING.org][Contributing]].
 - [ ] Build package manually and make sure it installs and loads
-- [ ] Build package with MELPA and make sure it installs and loads
+- [ ] Build package with [[https://github.com/melpa/melpa#build-scripts][MELPA]] and make sure it installs and loads
 - [ ] Complete [[TestPlan.org][Test Plan]].
 - [ ] Update [[./HISTORY.org][History]]
 - [ ] Bring to ~master~ and tag the release
