--- a/docs/ReleaseProcess.org
+++ b/docs/ReleaseProcess.org
@@ -3,5 +3,5 @@
 - [ ] Build package manually and make sure it installs and loads
 - [ ] Build package with [[https://github.com/melpa/melpa#build-scripts][MELPA]] and make sure it installs and loads
 - [ ] Complete [[TestPlan.org][Test Plan]].
-- [ ] Update [[./HISTORY.org][History]]
+- [ ] Update [[../HISTORY.org][History]]
 - [ ] Bring to ~master~ and tag the release
